Update UI colors and styles across multiple components for a cohesive design
- Changed primary, secondary, and accent colors in popup.html, styles.css, and globals.css to align with the new branding.
- Enhanced hover effects and shadows in styles.css for better visual feedback.
- Updated layout spacing in interview-prep and sign-in pages for improved user experience.
- Incorporated Playfair font in headings for a more polished look across sign-in and sign-up pages.

--- a/packages/extension/src/popup.html
+++ b/packages/extension/src/popup.html
@@ -6,9 +6,9 @@
   <title>Hireall - Job Tracker</title>
   <style>
     :root {
-      --primary: #b86e37;
-      --primary-dark: #9a5a2d;
-      --secondary: #e6c9a8;
+      --primary: #4CAF50;
+      --primary-dark: #388E3C;
+      --secondary: #20B2AA;
       --accent: #f8f9fa;
       --success: #10b981;
       --warning: #f59e0b;
