--- a/packages/extension/src/popup.html
+++ b/packages/extension/src/popup.html
@@ -7,16 +7,26 @@
   <style>
     :root {
       --primary: #4CAF50;
-      --primary-dark: #388E3C;
+      --primary-foreground: #ffffff;
       --secondary: #20B2AA;
-      --accent: #f8f9fa;
+      --secondary-foreground: #ffffff;
+      --accent: #C8E6C9;
+      --accent-foreground: #1B5E20;
       --success: #10b981;
       --warning: #f59e0b;
       --error: #ef4444;
       --info: #3b82f6;
-      --muted: #6b7280;
-      --border: #e5e7eb;
-      --card-bg: #ffffff;
+      --muted: #71717a;
+      --muted-foreground: #6b7280;
+      --border: #e4e4e7;
+      --input: #e4e4e7;
+      --card: #ffffff;
+      --card-foreground: #18181b;
+      --popover: #ffffff;
+      --popover-foreground: #18181b;
+      --background: #ffffff;
+      --foreground: #18181b;
+      --ring: #9FE2BF;
       --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
       --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
       --radius: 8px;
@@ -33,11 +43,11 @@
       min-height: 600px;
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
+      background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
       font-size: 14px;
       line-height: 1.5;
-      color: #374151;
+      color: var(--foreground);
       overflow-x: hidden;
     }
 
@@ -73,12 +83,12 @@
     .logo {
       width: 32px;
       height: 32px;
-      background: linear-gradient(135deg, var(--primary), var(--primary-dark));
+      background: linear-gradient(135deg, var(--primary), #388E3C);
       border-radius: var(--radius);
       display: flex;
       align-items: center;
       justify-content: center;
-      color: white;
+      color: var(--primary-foreground);
       font-size: 18px;
       font-weight: bold;
     }
